# spotify-api-automation

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  report.html  requirements.txt
api_clients/: auth_client.py  playlist_client.py
component/api_clients/: playlist_client.py
docs/: spotify_api_snippet.md
infra/: config_manager.py  request_handler.py
infra/api_clients/: auth_client.py  brower_client.py  playlist_client.py  search_client.py  spotify_client.py  user_client.py
infra/assertions/: assertion_manager.py
infra/auth/: oauth_handler.py  token_manager.py  token_provider.py  user_token_provider.py
infra/config/: app_config.py  config_manager.py  loader.py  runtime_env_writer.py  settings.py
infra/http/: base_request_engine.py  config_manager.py  request_handler.py  request_sender.py
infra/logging/: pytest_hooks.py
infra/mappers/: playlist_mapper.py
infra/models/: creat_playlist_response.py  error_response.py  playlist_response.py  token_response.py  user_profile_response.py
reports/html/: report.html
scripts/: create_playlist.py  get_spotify_tokens.py  get_user_token.py  run_doc_chat.py  run_nlp_query.py
tests/: conftest.py  test_playlist.py
tests/auth/: conftest.py  test_token.py  test_token_flow.py
tests/browse/: test_get_categories.py
tests/categories/: test_get_categories.py
tests/constants/: auth_constants.py  playlist_constants.py
utils/: assertion_manager.py  auth_utils.py  env_utils.py  image_utils.py  log_utils.py  param_loaders.py  yaml_loader.py
(+47 files in other folders)
